--- a/README.html
+++ b/README.html
@@ -204,7 +204,7 @@ hr {
 <h1>Coursera: Financial Engineering II: In-class Exercises in R</h1>
 
 <ul>
-<li><a href="#Lesson-1.1:-Mean-Variance-Overview">Lesson 1.1: Mean Variance Overview</a></li>
+<li><a href="#Lesson-1.1--Mean-Variance-Overview">Lesson 1.1: Mean Variance Overview</a></li>
 <li><a href="#Lesson-1.3-Sharpe-Optimal-Portfolio-and-the-Risk-Free-Frontier">Lesson 1.3 Sharpe Optimal Portfolio and the Risk-Free Frontier</a></li>
 </ul>
 
@@ -213,7 +213,7 @@ hr {
 
 <p><br /><br /></p>
 
-<h2><a name="Lesson-1.1:-Mean-Variance-Overview"></a>Lesson 1.1: Mean Variance Overview</h2>
+<h2><a name="Lesson-1.1--Mean-Variance-Overview"></a>Lesson 1.1: Mean Variance Overview</h2>
 
 <pre><code class="r">    asset.names &lt;- c(&quot;US Bonds&quot;,
                      &quot;Int’l Bonds&quot;,
