--- a/README.html
+++ b/README.html
@@ -204,11 +204,20 @@ hr {
 <h1>Coursera: Financial Engineering II: In-class Exercises in R</h1>
 
 <ul>
+<li><a href="#R-code">R code</a></li>
 <li><a href="#Lesson-1.1--Mean-Variance-Overview">Lesson 1.1: Mean Variance Overview</a></li>
 <li><a href="#Lesson-1.3-Sharpe-Optimal-Portfolio-and-the-Risk-Free-Frontier">Lesson 1.3 Sharpe Optimal Portfolio and the Risk-Free Frontier</a></li>
 </ul>
 
-<pre><code class="r">    options(width=100)
+<p><br /><br /></p>
+
+<h2><a name="R-code"></a>R code</h2>
+
+<p><a href="fin-eng-2.R">fin-eng-2.R</a></p>
+
+<pre><code class="r">    source(&quot;fin-eng-2.R&quot;)
+
+    options(width=100)
 </code></pre>
 
 <p><br /><br /></p>
@@ -512,9 +521,7 @@ hr {
 
 <h3>Solve for efficient frontier analytically</h3>
 
-<pre><code class="r">    source(&quot;fin-eng-2.R&quot;)
-
-    #
+<pre><code class="r">    #
     # Global minimum variance portfolio: portfolio that has
     # the minimum variance (risk).
     #
